...
                    val userDataFS by fsUser.observeAsState()

                    var priceAlerts by remember { mutableStateOf<List<PriceAlert>?>(null) }

                    val items = listOf(
                        NavItem("Item", R.drawable.ic_baseline_storefront_24),
                        NavItem("Barters", R.drawable.ic_baseline_compare_arrows_24, bartersFiltered.isNotEmpty()),
                        NavItem("Crafts", R.drawable.ic_baseline_handyman_24, craftsFiltered.isNotEmpty()),
                        NavItem("Quests", R.drawable.ic_baseline_assignment_24, quests.isNotEmpty())
                    )

                    var isFavorited by remember {
                        mutableStateOf(Favorites.items.contains(itemID))
                    }
...
                        scaffoldState = scaffoldState,
                        topBar = {
                            FleaDetailToolbar(
                                item = item,
                                actions = {
                                    IconButton(
                                        modifier = Modifier.testTag("bookmark"),
                                        onClick = {
                                            isFavorited = if (isFavorited) {
                                                Favorites.items.remove(lifecycleScope, itemID)
                                                //extras.removeFavorite(itemID)
                                                false
                                            } else {
...
                    Divider(
                        modifier = Modifier.padding(bottom = 8.dp),
                        color = Color(0x1F000000)
                    )
                    CompositionLocalProvider(LocalContentAlpha provides ContentAlpha.medium) {
                        Text(
                            text = "NEEDS",
                            fontSize = 12.sp,
                            fontWeight = FontWeight.Light,
                            fontFamily = Bender,
                            modifier = Modifier.padding(bottom = 8.dp, top = 4.dp, start = 16.dp, end = 16.dp)
                        )
                    }
...
