...
                    }
                    MainToolbar(
                        title = "Flea Market",
                        navViewModel = navViewModel
                    ) {
                        IconButton(
                            modifier = Modifier.testTag("search"),
                            onClick = {
                                fleaViewModel.setSearchOpen(true)
                            }) {
                            Icon(
                                Icons.Filled.Search,
                                contentDescription = "Search",
...
    val route: String,
    val resourceId: String,
    val icon: ImageVector? = null,
    @DrawableRes val iconDrawable: Int? = null,
    @DrawableRes val unselectedDrawable: Int? = null
) {
    object Items : FleaMarketScreens("Items", "Items", null, R.drawable.ic_baseline_storefront_24)
    object Needed : FleaMarketScreens("Needed", "Needed", null, R.drawable.icons8_wish_list_96)
    object Favorites :
        FleaMarketScreens("Favorites", "Favorites", null, R.drawable.ic_baseline_favorite_24)

    object ShoppingCart :
        FleaMarketScreens("Cart", "Cart", null, R.drawable.ic_baseline_shopping_cart_24)
    //object Alerts : FleaMarketScreens("Alerts", "Price Alerts", null, R.drawable.ic_baseline_notifications_active_24)
}
